--- a/package.json
+++ b/package.json
@@ -3,24 +3,27 @@
 	"version": "1.0.0",
 	"description": "A Boilerplate Code for a Express App with support of Typescript.",
 	"scripts": {
-		"start": "node bin/server.js",
-		"tsc": "tsc",
-		"dev": "tsc -w"
+		"start": "ts-node --fast ./bin/server.ts",
+		"dev": "nodemon --exec 'ts-node --cache-directory .tscache' ./bin/server.ts"
 	},
 	"repository": "https://github.com/akgurjar/typ-app.git",
 	"author": "ashish gurjar <akp51081@gmail.com>",
 	"license": "GPL-3.0",
 	"private": false,
-	"devDependencies": {
-		"@types/express": "^4.0.39",
-		"@types/node": "^8.0.53",
-		"typescript": "^2.6.2"
-	},
 	"dependencies": {
+		"@types/body-parser": "^1.16.8",
+		"@types/cookie-parser": "^1.4.1",
+		"@types/ejs": "^2.5.0",
+		"@types/express": "^4.11.1",
+		"@types/node": "^9.4.0",
+		"body-parser": "^1.18.2",
 		"cookie-parser": "^1.4.3",
 		"ejs": "^2.5.7",
 		"express": "^4.16.2",
 		"morgan": "^1.9.0",
-		"serve-favicon": "^2.4.5"
+		"nodemon": "^1.14.12",
+		"serve-favicon": "^2.4.5",
+		"ts-node": "^4.1.0",
+		"typescript": "^2.7.1"
 	}
 }
