more types added

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"@types/cookie-parser": "^1.4.1",
 		"@types/ejs": "^2.5.0",
 		"@types/express": "^4.11.1",
+		"@types/morgan": "^1.7.35",
 		"@types/node": "^9.4.0",
+		"@types/serve-favicon": "^2.2.30",
 		"body-parser": "^1.18.2",
 		"cookie-parser": "^1.4.3",
 		"ejs": "^2.5.7",
