--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "A Boilerplate Code for a Express App with support of Typescript.",
 	"scripts": {
-		"start": "ts-node --fast ./bin/server.ts",
+		"start": "ts-node ./bin/server.ts --fast",
 		"dev": "nodemon --exec 'ts-node --cache-directory .tscache' ./bin/server.ts"
 	},
 	"repository": "https://github.com/akgurjar/TEA.git",
@@ -13,10 +13,11 @@
 	"dependencies": {
 		"@types/body-parser": "^1.16.8",
 		"@types/cookie-parser": "^1.4.1",
+		"@types/debug": "^0.0.30",
 		"@types/ejs": "^2.5.0",
 		"@types/express": "^4.11.1",
 		"@types/morgan": "^1.7.35",
-		"@types/node": "^9.4.0",
+		"@types/node": "10.3.5",
 		"@types/serve-favicon": "^2.2.30",
 		"body-parser": "^1.18.2",
 		"cookie-parser": "^1.4.3",
@@ -25,7 +26,7 @@
 		"morgan": "^1.9.0",
 		"nodemon": "^1.14.12",
 		"serve-favicon": "^2.4.5",
-		"ts-node": "^4.1.0",
+		"ts-node": "7.0.0",
 		"typescript": "^2.7.1"
 	}
 }
