--- a/package.json
+++ b/package.json
@@ -3,30 +3,46 @@
 	"version": "1.0.0",
 	"description": "A Boilerplate Code for a Express App with support of Typescript.",
 	"scripts": {
-		"start": "ts-node ./bin/server.ts --fast",
-		"dev": "nodemon --exec 'ts-node --cache-directory .tscache' ./bin/server.ts"
+		"start": "NODE_ENV=production ts-node ./src/bin/server.ts --fast",
+		"dev": "NODE_ENV=development ts-node ./src/bin/server.ts --fast",
+		"stag": "NODE_ENV=stagging ts-node ./src/bin/server.ts --fast",
+		"local": "NODE_ENV=local ts-node-dev ./src/bin/server.ts"
 	},
 	"repository": "https://github.com/akgurjar/TEA.git",
 	"author": "ashish gurjar <akp51081@gmail.com>",
 	"license": "GPL-3.0",
 	"private": false,
 	"dependencies": {
+		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.16.8",
 		"@types/cookie-parser": "^1.4.1",
-		"@types/debug": "^0.0.30",
-		"@types/ejs": "^2.5.0",
+		"@types/debug": "^0.0.31",
+		"@types/dotenv": "^6.1.0",
+		"@types/ejs": "^2.6.1",
 		"@types/express": "^4.11.1",
+		"@types/joi": "^14.0.1",
+		"@types/jsonwebtoken": "^8.3.0",
+		"@types/mongoose": "^5.3.5",
 		"@types/morgan": "^1.7.35",
-		"@types/node": "10.3.5",
+		"@types/node": "10.12.18",
 		"@types/serve-favicon": "^2.2.30",
+		"bcrypt": "^3.0.3",
 		"body-parser": "^1.18.2",
 		"cookie-parser": "^1.4.3",
+		"dotenv": "^6.2.0",
 		"ejs": "^2.5.7",
-		"express": "^4.16.2",
-		"morgan": "^1.9.0",
-		"nodemon": "^1.14.12",
+		"express": "^4.16.4",
+		"joi": "^14.3.1",
+		"jsonwebtoken": "^8.4.0",
+		"mongoose": "^5.4.1",
+		"morgan": "^1.9.1",
 		"serve-favicon": "^2.4.5",
-		"ts-node": "7.0.0",
-		"typescript": "^2.7.1"
+		"ts-node": "7.0.1",
+		"tsconfig-paths": "^3.7.0",
+		"typegoose": "^5.4.1",
+		"typescript": "^3.2.2"
+	},
+	"devDependencies": {
+		"ts-node-dev": "^1.0.0-pre.32"
 	}
 }
