--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
 		"@types/mongoose": "^5.3.5",
 		"@types/morgan": "^1.7.35",
 		"@types/node": "10.12.18",
+		"@types/passport": "^1.0.0",
+		"@types/passport-jwt": "^3.0.1",
+		"@types/passport-local": "^1.0.33",
 		"@types/serve-favicon": "^2.2.30",
 		"bcrypt": "^3.0.3",
 		"body-parser": "^1.18.2",
@@ -36,6 +39,9 @@
 		"jsonwebtoken": "^8.4.0",
 		"mongoose": "^5.4.1",
 		"morgan": "^1.9.1",
+		"passport": "^0.4.0",
+		"passport-jwt": "^4.0.0",
+		"passport-local": "^1.0.0",
 		"serve-favicon": "^2.4.5",
 		"ts-node": "7.0.1",
 		"tsconfig-paths": "^3.7.0",
