listing added without resolving linting issues

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"start": "NODE_ENV=production ts-node ./src/bin/server.ts --fast",
 		"dev": "NODE_ENV=development ts-node ./src/bin/server.ts --fast",
 		"stag": "NODE_ENV=stagging ts-node ./src/bin/server.ts --fast",
-		"local": "NODE_ENV=local ts-node-dev ./src/bin/server.ts"
+		"local": "NODE_ENV=local ts-node-dev ./src/bin/server.ts",
+		"lint": "tslint -p tsconfig.json"
 	},
 	"repository": "https://github.com/akgurjar/TEA.git",
 	"author": "ashish gurjar <akp51081@gmail.com>",
@@ -45,6 +46,7 @@
 		"serve-favicon": "^2.4.5",
 		"ts-node": "7.0.1",
 		"tsconfig-paths": "^3.7.0",
+		"tslint": "^5.12.1",
 		"typegoose": "^5.4.1",
 		"typescript": "^3.2.2"
 	},
