reset email template and mailer

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@types/mongoose": "^5.3.5",
 		"@types/morgan": "^1.7.35",
 		"@types/node": "10.12.18",
+		"@types/nodemailer": "^4.6.5",
 		"@types/passport": "^1.0.0",
 		"@types/passport-jwt": "^3.0.1",
 		"@types/passport-local": "^1.0.33",
@@ -40,6 +41,7 @@
 		"jsonwebtoken": "^8.4.0",
 		"mongoose": "^5.4.1",
 		"morgan": "^1.9.1",
+		"nodemailer": "^5.1.1",
 		"passport": "^0.4.0",
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
