--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
 	"license": "GPL-3.0",
 	"private": false,
 	"dependencies": {
+		"@hapi/joi": "^16.1.7",
 		"@types/bcrypt": "^3.0.0",
 		"@types/body-parser": "^1.17.1",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/debug": "^0.0.31",
 		"@types/dotenv": "^6.1.1",
 		"@types/ejs": "^2.6.3",
-		"@types/express": "^4.17.1",
-		"@types/joi": "^14.3.3",
+		"@types/express": "^4.17.2",
+		"@types/joi": "^14.3.4",
 		"@types/jsonwebtoken": "^8.3.5",
 		"@types/mongoose": "^5.5.28",
 		"@types/morgan": "^1.7.37",
@@ -48,10 +49,10 @@
 		"passport-jwt": "^4.0.0",
 		"passport-local": "^1.0.0",
 		"serve-favicon": "^2.4.5",
-		"ts-node": "7.0.1",
+		"ts-node": "^8.4.1",
 		"tsconfig-paths": "^3.9.0",
 		"tslint": "^5.20.0",
-		"twilio": "^3.36.0",
+		"twilio": "^3.37.0",
 		"typescript": "^3.6.4",
 		"uuid": "^3.3.3",
 		"winston": "^3.2.1"
